<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tabla1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:text="@string/nombre" />

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:inputType="textPersonName" >
            <requestFocus />
        </EditText>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tel1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tel2" />
        </TableRow>

        <TableRow>
            <EditText
                android:id="@+id/txtTelefono1"
                android:layout_width="144dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone" />
            <EditText
                android:id="@+id/txtTelefono2"
                android:layout_width="144dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone" />
        </TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:text="@string/direccion" />

        <EditText
            android:id="@+id/txtDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPostalAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:text="@string/notas" />

        <EditText
            android:id="@+id/txtNotas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine"
            android:minLines="3" />

        <CheckBox
            android:id="@+id/cbxFavorito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorito" />

        <TableRow >
            <Button
                android:id="@+id/btnLimpiar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_limpiar" />
            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_guardar" />
        </TableRow>

        <Button
            android:id="@+id/btnListar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:text="@string/btn_listar" />
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
